[project]
name = "llm-observability"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai>=2.28.0",
    "openai-agents>=0.12.2",
    "openinference-instrumentation-openai>=0.1.42",
    "openinference-instrumentation-openai-agents>=1.4.0",
]
